# build_agent

./: .cursorrules  .gitignore  AGENTS.md  AI_TASK_GUARDRAILS.md  HANDOFF_CHECKLIST.md  LICENSE  NORTH_STAR.md  PROJECT_STATUS.md  README.md  pyproject.toml  pyrightconfig.json  最佳实践.md
.agents/workflows/: rules.md
.claude/: settings.local.json
docs/architecture/: CODEBASE_STRUCTURE.md  README.md  interfaces.md
docs/governance/: AI_TASK_GUARDRAILS.md  HANDOFF_CHECKLIST.md  NORTH_STAR.md  PRODUCTION_READINESS_CHECKLIST.md  PROJECT_STATUS.md  README.md  ROADMAP_COMPONENTS.md  TUTORIAL_ALIGNMENT_AUDIT.md
docs/legal-safety/: disclaimer.md  risk-levels.md
docs/tutorials/: 01-从0到1工业级Agent框架打造-第一章-为什么你总是做不出可上线的Agent.md  01-北极星与法律边界.md  02-从0到1工业级Agent框架打造-第二章-Protocol协议层-手把手实战.md  02-仓库骨架与CI.md  03-Agent核心抽象与最小闭环.md  03-从0到1工业级Agent框架打造-第三章-Engine循环-反思机制与生产约束.md  03-从0到1工业级Agent框架打造-第三章-Engine循环-让Agent真正跑起来.md  04-从0到1工业级Agent框架打造-第四章-ModelRuntime-大模型适配与防崩塌控制.md  04-劳动纠纷案情建模.md  05-从0到1工业级Agent框架打造-第五章-ToolRuntime-函数调用与隔离执行.md  05-法律检索系统.md  06-从0到1工业级Agent框架打造-第六章-Observability-可观测与回放闭环.md  06-检索进阶与引用规范.md  07-从0到1工业级Agent框架打造-第七章-ContextEngineering-上下文编排与预算治理.md  07-记忆系统设计.md  08-上下文工程.md  08-从0到1工业级Agent框架打造-第八章-Retrieval-检索召回与引用标准化.md  09-从0到1工业级Agent框架打造-第九章-Memory-双层记忆写入与语义召回.md  09-智能体通信协议.md  10-从0到1工业级Agent框架打造-第十章-Evaluator-结果评估与轨迹评分.md  10-分流与路径规划Agent.md  11-从0到1工业级Agent框架打造-第十一章-SafetyLayer-输入工具输出三段防线.md  11-证据清单与文书草稿Agent.md  12-从0到1工业级Agent框架打造-第十二章-Agent-开箱即用入口与可扩展编排层.md  12-合规与安全.md  13-智能体评估体系.md  14-部署与社区发布.md  _CHAPTER_TEMPLATE.md  _TUTORIAL_GOLD_STANDARD.md
examples/agent/: agent_app_demo.py  agent_demo.py
tests/: __init__.py  conftest.py  test_engine.py  test_protocol.py
(+206 files in other folders)
